cambios de form usuario

--- a/core/templates/usuario/usuario_form.html
+++ b/core/templates/usuario/usuario_form.html
@@ -37,6 +37,18 @@
     input[name="password1"], input[name="password2"] {
       padding-right: 35px !important;
     }
+
+    .toggle-password:hover {
+    color: #000; 
+    }
+
+    .toggle-password.fa-eye {
+    color: #cce064;
+    }
+
+    .toggle-password.fa-eye-slash {
+    color: #cce064; 
+    }
 </style>
 
 <h2 class="titulo">
