--- a/core/templates/cliente/cliente_list.html
+++ b/core/templates/cliente/cliente_list.html
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <!-- Lista de reparaciones -->
+  <!-- Lista de clientes -->
   <div class="table-container">
     <div id="no-results-message" class="alert alert-info text-center" style="display: none;">
       <i class="bi bi-exclamation-circle me-2"></i> El cliente no existe
@@ -54,7 +54,7 @@
           <td>{{ cliente.apellido }}</td>
           <td>{{ cliente.telefono }}</td>
           <td>
-            <a href="{% url 'cliente_editar' id=cliente.id %}" class="btn btn-sm btn-outline-primary"
+            <a href="{% url 'cliente_editar' cliente.id %}" class="btn btn-sm btn-outline-primary"
               title="Editar cliente">
               <i class="bi bi-pencil fs-4"></i>
             </a>
